# factor-lab

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  pyvenv.cfg
.github/workflows/: ci.yml
Scripts/: activate  activate.bat  activate.fish  activate.nu
data/: sample_ff3_monthly.csv
src/factor_lab.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/factorlab/: __init__.py  cli.py  data.py  models.py  plots.py  rolling.py
tests/: test_data_sample.py  test_models_synthetic.py  test_rolling.py
