[project]
name = "factor-lab"
version = "0.1.0"
description = "From-scratch factor models: Fama-French, rolling betas, and CLI over real market data."
readme = "README.md"
requires-python = ">=3.10"
authors = [{name="Clyde Williams"}]
dependencies = [
  "numpy>=1.26",
  "pandas>=2.1",
  "statsmodels>=0.14",
  "matplotlib>=3.7",
  "click>=8.1",
  "yfinance>=0.2.50"
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "hypothesis>=6",
  "mypy>=1.10",
  "ruff>=0.5",
  "black>=24",
  "pre-commit>=3",
  "jupyter>=1"
]

[project.scripts]
factorlab = "factorlab.cli:app"

[tool.ruff]
line-length = 100

[tool.mypy]
python_version = "3.13"
ignore_missing_imports = true

